Atualizar o Index.html

--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <title>Dragões – Como Treinar seu Dragão</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
+<header>
+    <h1>Dragões</h1>
+    <p>Como Treinar seu Dragão</p>
+
+    <input 
+        type="text" 
+        id="search" 
+        placeholder="Pesquisar dragão..."
+        onkeyup="filtrarDragoes()"
+    >
+</header>
+
+<main id="dragon-list">
+  <!-- Miniatura do Fúria da Noite -->
+  <div class="dragao">
+    <a href="furia_da_noite.html">
+      <img src="https://detailed-tan-4zvqwah9pj.edgeone.app/1310b490f2b52b032410084012bcacd7.jpg" alt="Fúria da Noite">
+      <p>Fúria da Noite</p>
+    </a>
+  </div>
+
+  <!-- Aqui você pode adicionar outras miniaturas de dragões -->
+  <!-- Exemplo: Morte Rubra -->
+  <!--
+  <div class="dragao">
+    <a href="morte_rubra.html">
+      <img src="imagens/morte_rubra_pequena.jpg" alt="Morte Rubra">
+      <p>Morte Rubra</p>
+    </a>
+  </div>
+  -->
+</main>
+
+<script src="script.js"></script>
+</body>
+</html>
