Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <main id="dragon-list">
   <!-- Miniatura do Fúria da Noite -->
   <div class="dragao">
-    <a href="dragões/furia_da_noite.html">
+    <a href="dragoes/furia_da_noite.html">
       <img src="https://detailed-tan-4zvqwah9pj.edgeone.app/1310b490f2b52b032410084012bcacd7.jpg" alt="Fúria da Noite">
       <p>Fúria da Noite</p>
     </a>
