Atualizar o furia_da_noite.html

--- a/dragoes/furia_da_noite.html
+++ b/dragoes/furia_da_noite.html
@@ -1,1 +1,90 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <title>Fúria da Noite - Toothless</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 900px;
+      margin: auto;
+      padding: 20px;
+      line-height: 1.6;
+      background-color: #f5f5f5;
+      color: #222;
+    }
+
+    h1 {
+      text-align: center;
+      font-size: 2.5em;
+      margin-bottom: 10px;
+    }
+
+    img {
+      display: block;
+      max-width: 100%;
+      border-radius: 15px;
+      margin: 20px auto;
+    }
+
+    .info {
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 15px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
+
+    .info p {
+      margin-bottom: 15px;
+    }
+
+    .section-title {
+      font-weight: bold;
+      margin-top: 15px;
+      margin-bottom: 5px;
+      font-size: 1.2em;
+    }
+
+    a {
+      display: inline-block;
+      margin-top: 20px;
+      text-decoration: none;
+      color: #0077cc;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <h1>Fúria da Noite - Toothless</h1>
+
+  <img src="https://detailed-tan-4zvqwah9pj.edgeone.app/1310b490f2b52b032410084012bcacd7.jpg" alt="Fúria da Noite">
+
+  <div class="info">
+    <p class="section-title">Descrição detalhada:</p>
+    <p>
+      A Fúria da Noite é um dragão único, ágil e extremamente inteligente, considerado a espécie mais rara de todos os dragões. Suas escamas negras quase se confundem com a noite, tornando-o quase invisível durante o voo. Ele é altamente leal e formidável em combate, usando velocidade, agilidade e inteligência estratégica para atacar e se defender.
+    </p>
+
+    <p class="section-title">Classe:</p>
+    <p>
+      Ofensivo / Voador – especialista em ataques rápidos e furtivos, capaz de combinar velocidade com precisão letal.
+    </p>
+
+    <p class="section-title">Habilidades:</p>
+    <ul>
+      <li>Voo extremamente rápido e ágil</li>
+      <li>Disparo de plasma explosivo (sopro de energia)</li>
+      <li>Ocultação parcial em ambientes escuros</li>
+      <li>Alta inteligência estratégica em combates</li>
+      <li>Lealdade total ao seu treinador</li>
+    </ul>
+  </div>
+
+  <a href="index.html">← Voltar para todos os dragões</a>
+</body>
+</html>
 
